--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ requests.txt
 
 #hide data files
 data
+
+#hide discord.py version of bot
+main(deprecated).py
+
+#hide bot invite link
+oauth2.txt
