Overhauled repo to seperate bot files and http files. Each also now contain their own dockerfiles. Http server updated to use gunicorn for a more stable user experience.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 #hide bot token
 token.txt
 
-#hide bot owner id
-owner_id.txt
-
 #hide logo purchase link
 logo_purchase.txt
 
@@ -15,3 +12,17 @@ main(deprecated).py
 
 #hide bot invite link
 oauth2.txt
+
+#hide dev tools
+devtools
+
+#hide ssl info
+privkey.pem
+cert.pem
+
+#hide logs
+http.log
+bot.log
+
+#hide restful version of web app
+restful-version.txt
