Overhauled repo to seperate bot files and http files. Each also now contain their own dockerfiles. Http server updated to use gunicorn for a more stable user experience.

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@ bot.log
 
 #hide restful version of web app
 restful-version.txt
+
+#hide reader
+reader.py
+
+#hide tests (not fully implemented)
+translator_tests.py
